@@ -1,23 +1,9 @@
 pg_maintenance
 Doing maintenance on cluster 7.4/pg74...
-vacuumdb: vacuuming database "nobodydb"
-VACUUM
-vacuumdb: vacuuming database "template1"
-VACUUM
 Skipping cluster 8.0/pg80 since pg_autovacuum is running on it
 pg_maintenance -f -a
 Doing maintenance on cluster 7.4/pg74...
-vacuumdb: vacuuming database "nobodydb"
-VACUUM
-vacuumdb: vacuuming database "template1"
-VACUUM
 Skipping cluster 8.0/pg80 since pg_autovacuum is running on it
 pg_maintenance --force
 Doing maintenance on cluster 7.4/pg74...
-vacuumdb: vacuuming database "nobodydb"
-VACUUM
-vacuumdb: vacuuming database "template1"
-VACUUM
 Doing maintenance on cluster 8.0/pg80...
-vacuumdb: vacuuming database "template1"
-VACUUM
